comificação do formulario

--- a/Angular2/view/detalhesContato.html
+++ b/Angular2/view/detalhesContato.html
@@ -1,13 +1,13 @@
 <div class="container">
     <table class="table">
         <tr>
-            <td>{{contato.nome}}</td>
+            <td>{{x.Nome}}</td>
         </tr>
         <tr>
-            <td>{{contato.telefone}}</td>
+            <td>{{x.Telefone}}</td>
         </tr>
         <tr>
-            <td>{{contato.data | date:"dd/MM/yyyy"}}</td>
+            <td>{{x.Data | date:"dd/MM/yyyy"}}</td>
         </tr>
     </table>
     <a href="#/contatos">Voltar</a>
