--- a/Angular2/view/formulario.html
+++ b/Angular2/view/formulario.html
@@ -1,12 +1,15 @@
 <div class="container-fluid">
     <div class="container">
         <form name="contatoForm">
-          <input ng-model="contato.nome" ng-required="true" ng-minlength="10" class="form-control" type="text" name="nome" placeholder="Nome">
-          <input ng-model="contato.telefone" ng-show="contatoForm.nome.$error && contato.nome.length >= 10" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" class="form-control" type="text" name="telefone" placeholder="Telefone">
-          <input ng-model="contato.data" ui-date class="form-control" type="text" name="data" placeholder="Data">
-          <select ng-model="contato.operadora" ng-options="operadora.nome + ' ('+ (operadora.preco | currency) +')' group by operadora.categoria for operadora in operadoras | orderBy: 'nome'" class="form-control">
+          <input ng-model="x.Nome" ng-required="true" ng-minlength="10" class="form-control" type="text" name="nome" placeholder="Nome">
+          <input ng-model="x.Telefone" ng-show="contatoForm.nome.$error && x.Nome.length >= 10" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" class="form-control" type="text" name="telefone" placeholder="Telefone">
+          <input ng-model="x.Data" class="form-control" type="text" name="data" placeholder="Data">
+          <input ng-model="x.Operadora" class="form-control" type="text" name="operadora" placeholder="Operadora">
+          <!--<select ng-model="x.Operadora" ng-options="operadora.nome + ' ('+ (operadora.preco | currency) +')' group by operadora.categoria for operadora in operadoras | orderBy: 'nome'" class="form-control">
             <option value="">Selecione uma operadora</option>
-          </select>
+        </select>-->
+
+            <button ng-submit="insertDados(x);" class="btn btn-primary btn-block" type="button">Adicionar Contato</button>
         </form>
 
         <div ng-messages="contatoForm.nome.$error" class="alert alert-danger">
@@ -14,9 +17,9 @@
             <div ng-message="minlength">O campo nome deve ter no minimo 10 caracteres!</div>
         </div>
 
-        <div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">Por favor, preencha o telefone!</div>
-        <div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">O campo telefone deve ter o formato 9999-9999</div>
+        <div ng-show="contatoForm.Telefone.$error.required && contatoForm.Telefone.$dirty" class="alert alert-danger">Por favor, preencha o telefone!</div>
+        <div ng-show="contatoForm.Telefone.$error.pattern" class="alert alert-danger">O campo telefone deve ter o formato 9999-9999</div>
 
-        <button ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid" class="btn btn-primary btn-block" type="button">Adicionar Contato</button>
+
     </div>
 </div>
